--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -11,7 +12,20 @@
     <title>{{ template "title" . }}</title>
 </head>
 <body>
-    {{if .Editing}} {{ template "edit" . }} {{ else }} {{ template "view" . }} {{end}}
+        <nav class="nav sticky-top bg-light">
+            <a href="#" class="nav-link active">Home</a>
+            <a href="#" class="nav-link">Code</a>
+        </nav>
+        <br/>
+        <br/>
+        {{range .}}
+            {{if .Editing}} 
+                {{ template "edit" . }} 
+            {{ else }} 
+                {{ template "view" . }} 
+            {{end}}
+        {{end}}
+    
 </body>
 </html>
 {{ end }}
